[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhp-dates"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Edd1CC", email = "edd@1cc.se" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Edd1CC/pyhp-dates#readme"
Issues = "https://github.com/Edd1CC/pyhp-dates/issues"
Source = "https://github.com/Edd1CC/pyhp-dates"

[tool.hatch.version]
path = "src/pyhp_dates/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyhp_dates tests}"

[tool.coverage.run]
source_pkgs = ["pyhp_dates", "tests"]
branch = true
parallel = true
omit = [
  "src/pyhp_dates/__about__.py",
]

[tool.coverage.paths]
pyhp_dates = ["src/pyhp_dates", "*/pyhp-dates/src/pyhp_dates"]
tests = ["tests", "*/pyhp-dates/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
